[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'Flask-Classful'
version = '0.16.0'
description = 'Class based views for Flask'
readme = 'README.rst'
authors = [
    { name = 'Freedom Dumlao', email = 'hq@teracy.com' },
    { name = 'Teracy, Inc', email = 'hq@teracy.com' }
]
license = 'LICENSE'
homepage = 'https://github.com/HarriLLC/flask-classful'
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Topic :: Software Development :: Libraries :: Python Modules'
]
dependencies = [
    'Flask>=2.3.2'
]
