[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Flask-Classful"
version = "0.16.0"
description = "Class based views for Flask"
readme = "README.rst"
license = { text = "BSD" }
authors = [
    { name = "Freedom Dumlao & Teracy, Inc", email = "hq@teracy.com" }
]
urls = { "Homepage" = "https://github.com/teracyhq/flask-classful" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "Flask>=2.3.2"
]

[tool.setuptools.packages.find]
where = ["src"]
